tests/fail/missing_default_elided_pos.tk
shape Person(
    name: str,
    age: i32 = 18
)

fn main() -> i32 {
    // Positional initialization using '..' for name (which has no default value!)
    auto p1 = Person(.., 20)

    return 0
}
